--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -15,12 +15,12 @@
     "\n",
     "In order to achieve this, we will take the following steps:\n",
     "\n",
-    "EDA:\n",
+    "**EDA**\n",
     "* Explore the contents of the tweet to identify the product and sentiment of the tweet.\n",
     "* Analyze the sentiments to identify common issues or contentment expressed by the user.\n",
     "* Make some meaningful recommendations to the brands that they can use to serve their customers better.\n",
     "\n",
-    "Modeling:\n",
+    "**Modeling**\n",
     "* Build a model that can classify the tweets into positive, negative or neutral emotions.\n",
     "* Deploy the model for production to track customer sentiments in real-time."
    ]
